Updating .env file

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,5 @@ DATABASE_HOSTNAME='hostname'
 DATABASE_PORT=port
 DATABASE_NAME='database name'
 SECRET_KEY='secret key' # openssl rand -hex 32
+ALGORITHM="Name of algorithm"
+ACCESS_TOKEN_EXPIRE_MINUTES="minutes (int)"
