--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,4 @@ DATABASE_NAME='database name'
 SECRET_KEY='secret key' # openssl rand -hex 32
 ALGORITHM="Name of algorithm"
 ACCESS_TOKEN_EXPIRE_MINUTES="minutes (int)"
+SQLALCHEMY_DATABASE_URL=f"postgresql://postgres:{DATABASE_PASSWORD}@{DATABASE_HOSTNAME}:{DATABASE_PORT}/{DATABASE_NAME}"
